---------------------------------------------------------------------------------------------------
Version: 0.10.3
Date: 28. 01. 2020
  Bugfixes:
    - Fixed sprite size issue when playing with Normal resolution sprites
---------------------------------------------------------------------------------------------------
Version: 0.10.2
Date: 25. 01. 2020
  Added:
    - New Stone and Concrete gates along with corresponding Basic and Advanced gates technologies
  Changed:
    - Balancing - Increased research cost of Advanced walls technology
  Bugfixes:
    - Fixed save game migration issue related to new flooring settings
  Locales:
    - Updated Polish translation (thanks to tomplus)
    - Updated Russian translation (thanks to 1avek1)
---------------------------------------------------------------------------------------------------
Version: 0.10.1
Date: 24. 01. 2020
  Changed:
    - Split the 'Enable Floorings' mod setting into two, enabling toggling of wooden and concrete tiles individually
  Bugfixes:
    - Updated icon size logic to better support newer variations of icon specification in 0.18
---------------------------------------------------------------------------------------------------
Version: 0.10.0
Date: 22. 01. 2020
  Added:
    - Support for Factorio 0.18
    - Signal color support for Realistic Ores mod
    - Basic handling of icon conflicts with Maintenance Madness mod
  Removed:
    - Support for Factorio 0.17 (use Dectorio version 0.9.16 instead)
  Locales:
    - Added Hungarian translation (thanks to mmnetworkteam)
    - Updated Spanish translation (thanks to notallme)
---------------------------------------------------------------------------------------------------
Version: 0.9.16
Date: 01. 10. 2019
  Added:
    - High resolution icons for crafting tab and most items
    - Support for high resolution icons in signs
  Changed: