@@ -104,12 +104,12 @@ Special thanks to the translators below (in no particular order).
 
 * Chinese Simplified (80%) - [jessefjxm](https://crowdin.com/profile/jessefjxm).
 * Chinese Traditional (34%) - [k98a](https://crowdin.com/profile/k98a).
-* Czech (64%) - [dereksp](https://crowdin.com/profile/dereksp), [Meritic](https://crowdin.com/profile/Meritic) and [Treij](https://crowdin.com/profile/Treij).
+* Czech (76%) - [dereksp](https://crowdin.com/profile/dereksp), [Meritic](https://crowdin.com/profile/Meritic) and [Treij](https://crowdin.com/profile/Treij).
 * French (89%) - [Taniotoshi](https://crowdin.com/profile/Taniotoshi) and [daikyraraga](https://crowdin.com/profile/daikyraraga).
 * German (92%) - [seeba8](https://github.com/seeba8), [ST-DDT](https://crowdin.com/profile/ST-DDT), [LastDawn](https://crowdin.com/profile/LastDawn), [lpzockerx](https://crowdin.com/profile/lpzockerx) and [Leridon](https://crowdin.com/profile/Leridon).
 * Hungarian (92%) - [mmnetworkteam](https://crowdin.com/profile/mmnetworkteam).
 * Korean (92%) - [GimoXagros](https://crowdin.com/profile/GimoXagros).
-* Polish (95%) - [Tomirad](https://github.com/Tomirad), [Requelfade](https://crowdin.com/profile/Requelfade), [no_desired_username](https://crowdin.com/profile/no_desired_username) and [tomplus](https://crowdin.com/profile/tomplus).
+* Polish (100%) - [Tomirad](https://github.com/Tomirad), [Requelfade](https://crowdin.com/profile/Requelfade), [no_desired_username](https://crowdin.com/profile/no_desired_username) and [tomplus](https://crowdin.com/profile/tomplus).
 * Portuguese, Brazilian (92%) - [celaquila](https://crowdin.com/profile/celaquila).
 * Russian (100%) - [nastyslave](https://crowdin.com/profile/nastyslave), [diraria](https://crowdin.com/profile/diraria), [scheugen86](https://crowdin.com/profile/scheugen86), [antonus777](https://crowdin.com/profile/antonus777), [schmarotzerltd](https://crowdin.com/profile/schmarotzerltd) and [1avek1](https://crowdin.com/profile/1avek1).
 * Spanish (92%) - [notallme](https://crowdin.com/profile/notallme).
