@@ -149,6 +149,7 @@ dect-lawnmower=While holding, __CONTROL__select-for-blueprint__ and drag over an
 
 [recipe-name]
 dect-concrete-wall-from-stone-wall=Concrete wall from Stone wall
+dect-concrete-gate-from-stone-gate=Concrete gate from Stone gate
 
 [entity-name]
 dect-wood-wall=Wooden barricade
