@@ -10,8 +10,9 @@ if DECT.ENABLED["walls"] then
 			{
 				type = "wall",
 				name = "stone-wall",
-				icon = "__base__/graphics/icons/wall.png",
-				icon_size = 32,
+				icon = "__Dectorio__/graphics/icons/stone-brick-wall.png",
+				icon_size = 64,
+				icon_mipmaps = 1,
 				flags = {"placeable-neutral", "player-creation"},
 				collision_box = {{-0.29, -0.29}, {0.29, 0.29}},
 				selection_box = {{-0.5, -0.5}, {0.5, 0.5}},
@@ -500,8 +501,9 @@ if DECT.ENABLED["walls"] then
 			{
 				type = "wall",
 				name = "dect-concrete-wall",
-				icon = "__Dectorio__/graphics/icons/concrete-wall.png",
-				icon_size = 32,
+				icon = "__base__/graphics/icons/wall.png",
+				icon_size = 64,
+				icon_mipmaps = 4,
 				flags = {"placeable-neutral", "player-creation"},
 				collision_box = {{-0.29, -0.29}, {0.29, 0.29}},
 				selection_box = {{-0.5, -0.5}, {0.5, 0.5}},
@@ -565,6 +567,7 @@ if DECT.ENABLED["walls"] then
 				name = "dect-chain-wall",
 				icon = "__Dectorio__/graphics/icons/chain-wall.png",
 				icon_size = 32,
+				icon_mipmaps = 1,
 				flags = {"placeable-neutral", "player-creation"},
 				collision_box = {{-0.29, -0.29}, {0.29, 0.29}},
 				selection_box = {{-0.5, -0.5}, {0.5, 0.5}},
@@ -951,6 +954,7 @@ if DECT.ENABLED["walls"] then
 				name = "dect-wood-wall",
 				icon = "__Dectorio__/graphics/icons/wood-wall.png",
 				icon_size = 32,
+				icon_mipmaps = 1,
 				flags = {"placeable-neutral", "player-creation"},
 				collision_box = {{-0.29, -0.29}, {0.29, 0.29}},
 				selection_box = {{-0.5, -0.5}, {0.5, 0.5}},
@@ -1350,7 +1354,7 @@ if DECT.ENABLED["walls"] then
 						{
 							filename = "__Dectorio__/graphics/entity/stone-gate/gate-horizontal.png",
 							line_length = 8,
-							width = 33, 
+							width = 33,
 							height = 45,
 							frame_count = 16,
 							shift = util.by_pixel(0, -4),
